--- a/index.html
+++ b/index.html
@@ -202,11 +202,10 @@
         </section>
         <section id="values">
             <h2 class="purple">VALUES</h2>
-            <div class="val__title">
-                <h1>We Always Abide by Our<span class="purple"> Principles</span></h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga quos consequatur animi architecto, veritatis itaque laboriosam vel cumque, nemo excepturi fugiat ducimus quisquam molestias consectetur nulla modi repellendus quod!</p>
-            </div>
             <div class="val__container">
+                <div class="val__text">
+                    <h1>We Always Abide by Our<span class="purple"> Principles</span></h1>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga quos consequatur animi architecto, veritatis itaque laboriosam vel cumque, nemo excepturi fugiat ducimus quisquam molestias consectetur nulla modi repellendus quod!</p>
                     <div class="val__row">
                         <div class="principles">
                             <div class="val__img">
@@ -226,14 +225,13 @@
                         </div>
                         <button class="btnq">Learn More</button>
                     </div>
-                    <div class="val__wrapper">
-                        <figure>
-                            <img class="pro__img" src="./assets/prototype.svg" alt="">
-                        </figure>
-                    </div>
+                    <figure>
+                        <img class="pro__img" src="./assets/prototype.svg" alt="">
+                    </figure>
                 </div>
             </div>
         </section>
+
         <section id="pricing">
             <div class="p__container">
                     <div class="val__title">
@@ -310,40 +308,50 @@
     <footer>
         <div class="last__container">
             <div class="last__rows">
-                <div class="footer__row">
+                <div class="last__row">
                     <div class="footer__title">MAIN</div>
-                    <p class="white">Blog</p>
-                    <p class="white">FAQs</p>
-                    <p class="white">Support</p>
-                    <p class="white">About Us</p>
+                        <ul class="footer__list">
+                            <li class="line">Blog</li>
+                            <li class="line">FAQs</li>
+                            <li class="line">Support</li>
+                            <li class="line">About Us</li>
+                        </ul>
                 </div>
-                <div class="footer__row">
+                <div class="last__row">
                     <div class="footer__title">Product</div>
-                    <p class="white">Log in</p>
-                    <p class="white">Personal</p>
-                    <p class="white">Business</p>
-                    <p class="white">Team</p>
+                        <ul class="footer__list">
+                            <li class="line">Log in</li>
+                            <li class="line">Personal</li>
+                            <li class="line">Business</li>
+                            <li class="line">Team</li>
+                        </ul>
                 </div>
-                <div class="footer__row">
+                <div class="last__row">
                     <div class="footer__title">Press</div>
-                    <p class="white">Logos</p>
-                    <p class="white">Events</p>
-                    <p class="white">Stories</p>
-                    <p class="white">Office</p>
+                        <ul class="footer__list">
+                            <li class="line">Logos</li>
+                            <li class="line">Events</li>
+                            <li class="line">Stories</li>
+                            <li class="line">office</li>
+                        </ul>
                 </div>
-                <div class="footer__row">
+                <div class="last__row">
                     <div class="footer__title">TEAM</div>
-                    <p class="white">Career</p>
-                    <p class="white">Founders</p>
-                    <p class="white">Culture</p>
-                    <p class="white">Onboarding</p>
+                        <ul class="footer__list">
+                            <li class="line">Career</li>
+                            <li class="line">Founders</li>
+                            <li class="line">Culture</li>
+                            <li class="line">Onboarding</li>
+                        </ul>
                 </div>
-                <div class="footer__row">
+                <div class="last__row">
                     <div class="footer__title">LEGAL</div>
-                    <p class="white">GDPR</p>
-                    <p class="white">Privacy Policy</p>
-                    <p class="white">Terms of Service</p>
-                    <p class="white">Disclaimer</p>
+                        <ul class="footer__list">
+                            <li class="line">GDPR</li>
+                            <li class="line">Privacy Policy</li>
+                            <li class="line">Terma of Service</li>
+                            <li class="line">Disclaimer</li>
+                        </ul>
                 </div>
             </div>
             <div class="copyright">© 2018 Treact Inc. All Rights Reserved.</div>
