--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section id="#home">
         <nav>
             <div class="nav__container">
-                <img class="logo" src="./assets/logo.svg" class="" alt=""> <span class="logo__title">TREACT</span>
+                <div class="frame"><img class="logo" src="./assets/logo.svg" alt=""><span class="logo__title">TREACT</span></div>
                     <ul class="nav__links">
                         <li><a href="#features" class="nav__link">About</a>
                         </li>
@@ -60,7 +60,7 @@
         <header>
             <div class="header__container">
                 <div class="row">
-                    <h1>Beautiful React Templates <span class="purple">for you.</span></h1>
+                    <h1 class="move">Beautiful React Templates <span class="purple">for you.</span></h1>
                     <h2>Our templates are easy to setup, understand and customize. Fully modular components with a variety of pages and components</h2>
                     <div class="email__btn">
                         <textarea class="email">your email Address</textarea>
@@ -82,7 +82,7 @@
     <main>
         <section id="features">
             <div class="feat__container">
-                <div class="row">
+                <div class="feat__row">
                     <h2 class="title">
                         FEATURES
                     </h2>
@@ -234,11 +234,11 @@
 
         <section id="pricing">
             <div class="p__container">
-                    <div class="val__title">
+                    <div class="p__title">
                         <h2 class="purple">Pricing</h2>
+                        <h1>Reasonable & Flexible<span class="purple"> Plans.</span></h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </div>
-                    <h1>Reasonable & Flexible<span class="purple"> Plans.</span></h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     <div class="p__rows">
                         <div class="p__row">
                             <div class="plan">
@@ -253,7 +253,7 @@
                                 <button Class="btn1">BUY NOW</button>
                             </div>
                         </div>
-                        <div class="p__row">
+                        <div class="p__row--two">
                             <div class="plan__2">
                                 <h2>Business</h2>
                                 <h1 class="white">$37.99</h1>
