--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <ul class="nav__links">
                         <li><a href="#features" class="nav__link">About</a>
                         </li>
-                        <li><a href="#values" class="nav__link">blog</a>
+                        <li><a href="#steps" class="nav__link">blog</a>
                         </li>
                         <li><a href="#pricing" class="nav__link">pricing</a>
                         </li>
@@ -161,7 +161,7 @@
         </section>
         <section id="quality">
             <div class="quality__container">
-                <div class="Quality__row">
+                <div class="quality__row">
                     <h2><span class="purple">QUALITY WORK</span></h2>
                     <h1>Designed & Developed by <span class="purple">Professionals.</span></h1>
                     <p>
