--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                     <ul class="nav__links">
                         <li><a href="#features" class="nav__link">About</a>
                         </li>
-                        <li><a href="#steps" class="nav__link">blog</a>
+                        <li><a href="#steps" class="nav__link">Blog</a>
                         </li>
-                        <li><a href="#pricing" class="nav__link">pricing</a>
+                        <li><a href="#pricing" class="nav__link">Pricing</a>
                         </li>
                         <li><a href="#testimonials" class="nav__link">Contact Us</a>
                         </li>
@@ -60,8 +60,9 @@
         <header>
             <div class="header__container">
                 <div class="row">
-                    <h1 class="move">Beautiful React Templates <span class="purple">for you.</span></h1>
-                    <h2>Our templates are easy to setup, understand and customize. Fully modular components with a variety of pages and components</h2>
+                    <div class="header__des">
+                        <h1> Beautiful React Templates <span class="purple">for you.</span></h1>
+                        <h3>Our templates are easy to setup, understand and customize. Fully modular components with a variety of pages and components</h3></div>
                     <div class="email__btn">
                         <textarea class="email">your email Address</textarea>
                         <a href="#">
@@ -73,7 +74,7 @@
                         <img class="img" src="./assets/custom.png" alt="">
                     </figure>
                 </div>
-                    <div class="header__description">
+                    <div class="header__img">
                         <img  class="bckg" src="./assets/bckg.svg" alt="">
                     </div>
             </div>
@@ -181,7 +182,7 @@
                 <div class="steps__title"><h2><span class="purple">STEPS</span></h2>
                 </div>
                 <div class="steps__row">
-                    <img class="lapt" src="/assets/lapT.png" alt="">
+                    <img class="lapt" src="assets/lapT.png" alt="">
                     <ul class="steps__list">
                         <h1>Easy to <span class="purple">Get Started.</span></h1>
                         <li class="">
