--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             <button class="btn">Get Started</button>
                         </a>
                     </div>
-                    <h6> OUR TRUSTED CUSTOMERS</h6>
+                    <h6 class="gray"> OUR TRUSTED CUSTOMERS</h6>
                     <figure class="trust">
                         <img class="img" src="./assets/custom.png" alt="">
                     </figure>
@@ -179,23 +179,29 @@
         </section>
         <section id="steps">
             <div class="steps__container">
-                <div class="steps__title"><h2><span class="purple">STEPS</span></h2>
-                </div>
-                <div class="steps__row">
+                <div class="steps__img">
                     <img class="lapt" src="assets/lapT.png" alt="">
+                    </div>
                     <ul class="steps__list">
+                        <h2 class="steps__title"><span class="purple">STEPS</span></h2>
                         <h1>Easy to <span class="purple">Get Started.</span></h1>
-                        <li class="">
-                            <h2><span class="gray">01</span> Register</h2>
-                            <h6>Create an account with us using Google or Facebook.</h6>
+                        <li class="steps__num">
+                            <span class="gray">01</span>
+                            <div class="steps__row"><h2>Register</h2>
+                                <p>Create an account with us using Google or Facebook.</p>
+                            </div>
                         </li>
-                        <li class="">
-                            <h2><span class="gray">02</span> Download</h2>
-                            <h6>Browse and Download the template that you like from the marketplace.</h6>
+                        <li class="steps__num">
+                            <span class="gray">02</span>
+                            <div class="steps__row"><h2>Download</h2>
+                                <p>Browse and Download the template that you like from the marketplace.</p>
+                            </div>
                         </li>
-                        <li class="">
-                            <h2><span class="gray">03</span> Run</h2>
-                            <h6>Follow the instructions to setup and customize the template to your needs.</h6>
+                        <li class="steps__num">
+                            <span class="gray">03</span>
+                            <div class="steps__row"><h2>Run</h2>
+                                <p>Follow the instructions to setup and customize the template to your needs.</p>
+                            </div>
                         </li>
                     </ul>
                 </div>
@@ -208,28 +214,32 @@
                     <h1>We Always Abide by Our<span class="purple"> Principles</span></h1>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga quos consequatur animi architecto, veritatis itaque laboriosam vel cumque, nemo excepturi fugiat ducimus quisquam molestias consectetur nulla modi repellendus quod!</p>
                     <div class="val__row">
-                        <div class="principles">
+                        <div class="principle">
                             <div class="val__img">
                                 <i class="fa fa-dollar-sign"></i>
                             </div>
                             <h3 class="val__subtitle">
-                            Affordable
+                            Affordable 
                             </h3>
-                            <h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum dolore repellendus voluptate. Beatae, quidem nisi!</h6>
+                            <div class="text"><h4>We promise to offer you the best rate we can - at par with the industry standard</h4>
+                            </div>
+                        </div>
+                        <div class="principle">
                             <div class="val__imgr">
                                 <i class="fa fa-suitcase"></i>
                             </div>
                             <h3 class="val__subtitle">
                                 Professionalism
                             </h3>
-                            <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio illum est error sed neque odit.</h6>
+                            <div class="text"><h4>We assure you that our templates are designed and created by professional designers</h4>
+                            </div>
                         </div>
-                        <button class="btnq">Learn More</button>
                     </div>
+                    <button class="btnq">Learn More</button>
+                </div>
                     <figure>
                         <img class="pro__img" src="./assets/prototype.svg" alt="">
                     </figure>
-                </div>
             </div>
         </section>
 
