--- a/index.html
+++ b/index.html
@@ -208,9 +208,8 @@
             </div>
         </section>
         <section id="values">
-            <h2 class="purple">VALUES</h2>
             <div class="val__container">
-                <div class="val__text">
+                <h2 class="purple">VALUES</h2>
                     <h1>We Always Abide by Our<span class="purple"> Principles</span></h1>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga quos consequatur animi architecto, veritatis itaque laboriosam vel cumque, nemo excepturi fugiat ducimus quisquam molestias consectetur nulla modi repellendus quod!</p>
                     <div class="val__row">
@@ -236,10 +235,12 @@
                         </div>
                     </div>
                     <button class="btnq">Learn More</button>
-                </div>
-                    <figure>
-                        <img class="pro__img" src="./assets/prototype.svg" alt="">
-                    </figure>
+                    <div class="val__pic">
+                        <figure>
+                            <img class="pro__img" src="./assets/prototype.svg" alt="">
+                        </figure>
+                    </div>
+
             </div>
         </section>
 
