--- a/index.html
+++ b/index.html
@@ -95,67 +95,69 @@
                         <div class="feat__img">
                             <i class="fa fa-shield"></i>
                         </div>
-                        <h3 class="feat__subtitle">
-                            secure
-                        </h3>
-                        <p class="feat__para">
-                            We strictly only deal with vendors that provide top notch security.
-                        </p>
+                        <div class="feat__subtitle">
+                            <h3>secure</h3>
+                            <p>
+                                We strictly only deal with vendors that provide top notch security.
+                            </p>
+                        </div>
                     </div>
                     <div class="feat__wrapper">
                         <div class="feat__img">
                             <i class="fa fa-phone"></i>
                         </div>
-                        <h3 class="feat__subtitle">
-                            24/7 Support
-                        </h3>
-                        <p class="feat__para">
-                            Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.
-                        </p>
+                        <div class="feat__subtitle">
+                            <h3>24/7 Support</h3>
+                            <p>
+                                Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.
+                            </p>
+                        </div>
                     </div>
                     <div class="feat__wrapper">
                         <div class="feat__img">
                             <i class="fa fa-sliders"></i>
                         </div>
-                        <h3 class="feat__subtitle">
-                            Customizable
-                        </h3>
-                        <p class="feat__para">
-                            Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.
-                        </p>
+                        <div class="feat__subtitle">
+                            <h3>Customizable</h3>
+                            <p>
+                                Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.
+                            </p>
+                        </div>
                     </div>
                     <div class="feat__wrapper">
                         <div class="feat__img">
                             <i class="fa fa-up-down"></i>
                         </div>
-                        <h3 class="feat__subtitle">
-                            Relaible
-                        </h3>
-                        <p class="feat__para">
-                            Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.
-                        </p>
+                        <div class="feat__subtitle">
+                            <h3 class="feat__subtitle">
+                                Relaible
+                            </h3>
+                            <p>
+                                Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.
+                            </p>
+                        </div>
                     </div>
                     <div class="feat__wrapper">
                         <div class="feat__img">
                             <i class="fa fa-bolt"></i>
                         </div>
-                        <h3 class="feat__subtitle">
-                            Fast
-                        </h3>
-                        <p class="feat__para">
-                            Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.
-                        </p>
+                        <div class="feat__subtitle">
+                            <h3>Fast</h3>
+                            <p>
+                                Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.
+                            </p>
+                        </div>
                     </div>
                     <div class="feat__wrapper">
                         <div class="feat__img">
                             <i class="fa fa-user"></i>
                         </div>
-                        <h3 class="feat__subtitle">
-                            easy
-                        </h3>
-                        <p class="feat__para">
-                            Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.
-                        </p>
+                        <div class="feat__subtitle">
+                            <h3>easy</h3>
+                            <p>
+                                Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -164,7 +166,7 @@
             <div class="quality__container">
                 <div class="quality__row">
                     <h2><span class="purple">QUALITY WORK</span></h2>
-                    <h1>Designed & Developed by <span class="purple">Professionals.</span></h1>
+                    <h1 class="quality__des">Designed & Developed by <span class="purple">Professionals.</span></h1>
                     <p>
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus repellat vero nostrum tempore consequuntur beatae minima voluptatum, ex accusamus animi, voluptates non eum iure fugit recusandae commodi nulla ipsum libero.
                     </p>
@@ -183,7 +185,7 @@
                     <img class="lapt" src="assets/lapT.png" alt="">
                     </div>
                     <ul class="steps__list">
-                        <h2 class="steps__title"><span class="purple">STEPS</span></h2>
+                        <h3 class="steps__title"><span class="purple">STEPS</span></h3>
                         <h1>Easy to <span class="purple">Get Started.</span></h1>
                         <li class="steps__num">
                             <span class="gray">01</span>
@@ -233,8 +235,8 @@
                             <div class="text"><h4>We assure you that our templates are designed and created by professional designers</h4>
                             </div>
                         </div>
+                        <button class="btnq">Learn More</button>
                     </div>
-                    <button class="btnq">Learn More</button>
                     <div class="val__pic">
                         <figure>
                             <img class="pro__img" src="./assets/prototype.svg" alt="">
