--- a/index.html
+++ b/index.html
@@ -211,32 +211,32 @@
         </section>
         <section id="values">
             <div class="val__container">
-                <h2 class="purple">VALUES</h2>
-                    <h1>We Always Abide by Our<span class="purple"> Principles</span></h1>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga quos consequatur animi architecto, veritatis itaque laboriosam vel cumque, nemo excepturi fugiat ducimus quisquam molestias consectetur nulla modi repellendus quod!</p>
-                    <div class="val__row">
-                        <div class="principle">
-                            <div class="val__img">
-                                <i class="fa fa-dollar-sign"></i>
+                <div class="valo">
+                    <h3 class="purple">VALUES</h3>
+                        <h1>We Always Abide by Our<span class="purple"> Principles</span></h1>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga quos consequatur animi architecto, veritatis itaque laboriosam vel cumque, nemo excepturi fugiat ducimus quisquam molestias consectetur nulla modi repellendus quod!</p>
+                        <div class="val__row">
+                            <div class="val__rows">
+                                <div class="principle">
+                                    <div class="val__img">
+                                        <i class="fa fa-dollar-sign"></i>
+                                    </div>
+                                    <h3 class="val__subtitle">Affordable</h3>
+                                </div>
+                                    <p>We promise to offer you the best rate we can - at par with the industry standard</p>
                             </div>
-                            <h3 class="val__subtitle">
-                            Affordable 
-                            </h3>
-                            <div class="text"><h4>We promise to offer you the best rate we can - at par with the industry standard</h4>
+                            <div class="val__rows">
+                                <div class="principle">
+                                    <div class="val__imgr">
+                                        <i class="fa fa-suitcase"></i>
+                                    </div>
+                                    <h3 class="val__subtitle">Professionalism</h3>
+                                </div>
+                                    <p>We assure you that our templates are designed and created by professional designers</p>
                             </div>
                         </div>
-                        <div class="principle">
-                            <div class="val__imgr">
-                                <i class="fa fa-suitcase"></i>
-                            </div>
-                            <h3 class="val__subtitle">
-                                Professionalism
-                            </h3>
-                            <div class="text"><h4>We assure you that our templates are designed and created by professional designers</h4>
-                            </div>
-                        </div>
-                        <button class="btnq">Learn More</button>
-                    </div>
+                            <button class="btnq">Learn More</button>
+                </div>
                     <div class="val__pic">
                         <figure>
                             <img class="pro__img" src="./assets/prototype.svg" alt="">
