--- a/index.html
+++ b/index.html
@@ -69,10 +69,12 @@
                             <button class="btn">Get Started</button>
                         </a>
                     </div>
-                    <h6 class="gray"> OUR TRUSTED CUSTOMERS</h6>
-                    <figure class="trust">
-                        <img class="img" src="./assets/custom.png" alt="">
-                    </figure>
+                    <div class="customers">
+                        <h6 class="gray"> OUR TRUSTED CUSTOMERS</h6>
+                        <figure class="trust">
+                            <img class="img" src="./assets/custom.png" alt="">
+                        </figure>
+                    </div>
                 </div>
                     <div class="header__img">
                         <img  class="bckg" src="./assets/bckg.svg" alt="">
@@ -165,7 +167,7 @@
         <section id="quality">
             <div class="quality__container">
                 <div class="quality__row">
-                    <h2><span class="purple">QUALITY WORK</span></h2>
+                    <h3><span class="purple">QUALITY WORK</span></h3>
                     <h1 class="quality__des">Designed & Developed by <span class="purple">Professionals.</span></h1>
                     <p>
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus repellat vero nostrum tempore consequuntur beatae minima voluptatum, ex accusamus animi, voluptates non eum iure fugit recusandae commodi nulla ipsum libero.
@@ -213,7 +215,7 @@
             <div class="val__container">
                 <div class="valo">
                     <h3 class="purple">VALUES</h3>
-                        <h1>We Always Abide by Our<span class="purple"> Principles</span></h1>
+                        <h1 class="steps__title">We Always Abide by Our<span class="purple"> Principles</span></h1>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga quos consequatur animi architecto, veritatis itaque laboriosam vel cumque, nemo excepturi fugiat ducimus quisquam molestias consectetur nulla modi repellendus quod!</p>
                         <div class="val__row">
                             <div class="val__rows">
@@ -255,15 +257,20 @@
                     </div>
                     <div class="p__rows">
                         <div class="p__row">
+                            <div class="col__line"></div>
                             <div class="plan">
                                 <h2>Personal</h2>
                                 <h1>$17.99</h1>
                                 <h2 class="gray">MONTHLY</h2>
+                            </div>
+                            <div class="companies">
                                 <h2>For Individuals</h2>
                                 <p>30 Templates</p>
                                 <p>7 Landing Pages</p>
                                 <p>12 Internal Pages</p>
                                 <p>Basic Assistance</p>
+                            </div>
+                            <div class="btn__des">
                                 <button Class="btn1">BUY NOW</button>
                             </div>
                         </div>
@@ -271,27 +278,35 @@
                             <div class="plan__2">
                                 <h2>Business</h2>
                                 <h1 class="white">$37.99</h1>
-                                <h2 class="gray">MONTHLY</h2>
-                                <h2>For Small Businesses</h2>
+                                <h2>MONTHLY</h2>
+                            </div>
+                            <div class="companies">
+                                <h2 class="white">For Small Businesses</h2>
                                 <p class="white">60 Templates</p>
                                 <p class="white">15 Landing Pages</p>
                                 <p class="white">22 Internal Pages</p>
                                 <p class="white">Priority Assistance</p>
+                            </div>
+                            <div class="btn__des">
                                 <button Class="btn2">BUY NOW</button>
                             </div>
                         </div>
                         <div class="p__row">
+                            <div class="col__line--two"></div>
                             <div class="plan">
                                 <h2>Enterprise</h2>
                                 <h1>$57.99</h1>
                                 <h2 class="gray">MONTHLY</h2>
-                                <h2>For Large Companies</h2>
+                            </div>
+                                <div class="companies"><h2>For Large Companies</h2>
                                 <p>90 Templates</p>
                                 <p>27 Landing Pages</p>
                                 <p>37 Internal Pages</p>
                                 <p>Personal Assistance</p>
-                                <button Class="btn3">BUY NOW</button>
                             </div>
+                                <div class="btn__des">
+                                    <button Class="btn3">BUY NOW</button>
+                                </div>
                         </div>
                     </div>
                 </div>
@@ -299,9 +314,11 @@
         </section>
         <section id="testimonials">
             <div class="test__container">
-                <figure>
-                    <img class="love__pic" src="./assets/love.svg" alt="">
-                </figure>
+                <div class="test__img">
+                    <figure>
+                        <img class="love__pic" src="./assets/love.svg" alt="">
+                    </figure>
+                </div>
                 <div class="test__row">
                     <h2 class="purple">TESTIMONIALS</h2>
                     <h1>Our Clients <span class="purple">Love Us.</span></h1>
