--- a/index.html
+++ b/index.html
@@ -86,79 +86,69 @@
         <section id="features">
             <div class="feat__container">
                 <div class="feat__row">
-                    <h2 class="title">
+                    <h3 class="title">
                         FEATURES
-                    </h2>
+                    </h3>
                     <h1>We have Amazing <span class="purple">Service.</span></h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, animi possimus alias quaerat doloremque voluptas! Adipisci, aliquid, nesciunt deleniti eaque quam tenetur.</p>
-                </div>
-                <div class="service__list">
-                    <div class="feat__wrapper">
-                        <div class="feat__img">
-                            <i class="fa fa-shield"></i>
+                    <div class="service__list">
+                        <div class="feat__wrapper">
+                            <div class="feat__img">
+                                <i class="fa fa-shield"></i>
+                            </div>
+                            <div class="feat__subtitle">
+                                <h3>secure</h3>
+                                <p>We strictly only deal with vendors that provide top notch security.</p>
+                            </div>
                         </div>
-                        <div class="feat__subtitle">
-                            <h3>secure</h3>
-                            <p>
-                                We strictly only deal with vendors that provide top notch security.
-                            </p>
+                        <div class="feat__wrapper">
+                            <div class="feat__img">
+                                <i class="fa fa-phone"></i>
+                            </div>
+                            <div class="feat__subtitle">
+                                <h3>24/7 Support</h3>
+                                <p>Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="feat__wrapper">
-                        <div class="feat__img">
-                            <i class="fa fa-phone"></i>
+                        <div class="feat__wrapper">
+                            <div class="feat__img">
+                                <i class="fa fa-sliders"></i>
+                            </div>
+                            <div class="feat__subtitle">
+                                <h3>Customizable</h3>
+                                <p>Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
+                            </div>
                         </div>
-                        <div class="feat__subtitle">
-                            <h3>24/7 Support</h3>
-                            <p>
-                                Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.
-                            </p>
+                        <div class="feat__wrapper">
+                            <div class="feat__img">
+                                <i class="fa fa-up-down"></i>
+                            </div>
+                            <div class="feat__subtitle">
+                                <h3 class="feat__subtitle">
+                                    Relaible
+                                </h3>
+                                <p>Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="feat__wrapper">
-                        <div class="feat__img">
-                            <i class="fa fa-sliders"></i>
+                        <div class="feat__wrapper">
+                            <div class="feat__img">
+                                <i class="fa fa-bolt"></i>
+                            </div>
+                            <div class="feat__subtitle">
+                                <h3>Fast</h3>
+                                <p>
+                                    Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.
+                                </p>
+                            </div>
                         </div>
-                        <div class="feat__subtitle">
-                            <h3>Customizable</h3>
-                            <p>
-                                Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="feat__wrapper">
-                        <div class="feat__img">
-                            <i class="fa fa-up-down"></i>
-                        </div>
-                        <div class="feat__subtitle">
-                            <h3 class="feat__subtitle">
-                                Relaible
-                            </h3>
-                            <p>
-                                Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="feat__wrapper">
-                        <div class="feat__img">
-                            <i class="fa fa-bolt"></i>
-                        </div>
-                        <div class="feat__subtitle">
-                            <h3>Fast</h3>
-                            <p>
-                                Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="feat__wrapper">
-                        <div class="feat__img">
-                            <i class="fa fa-user"></i>
-                        </div>
-                        <div class="feat__subtitle">
-                            <h3>easy</h3>
-                            <p>
-                                Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.
-                            </p>
+                        <div class="feat__wrapper">
+                            <div class="feat__img">
+                                <i class="fa fa-user"></i>
+                            </div>
+                            <div class="feat__subtitle">
+                                <h3>easy</h3>
+                                <p>Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -330,7 +320,7 @@
                         <i class=" fas fa-star"></i>
                         <i class=" fas fa-star"></i>
                     </div>
-                    <h2>Amazing User Experience</h2>
+                    <h2 class="trust">Amazing User Experience</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus magnam provident, odit veritatis, quis dignissimos temporibus aperiam non eligendi a commodi obcaecati ad cupiditate sit. Dolor voluptatum atque iusto ut!</p>
                 </div>
             </div>
