--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
                 <div class="row">
                     <div class="header__des">
                         <h1> Beautiful React Templates <span class="purple">for you.</span></h1>
-                        <h3>Our templates are easy to setup, understand and customize. Fully modular components with a variety of pages and components</h3></div>
+                        <h3>Our templates are easy to setup, understand and customize. Fully modular components with a variety of pages and components</h3>
+                    </div>
                     <div class="email__btn">
                         <textarea class="email">your email Address</textarea>
                         <a href="#">
@@ -124,9 +125,7 @@
                                 <i class="fa fa-up-down"></i>
                             </div>
                             <div class="feat__subtitle">
-                                <h3 class="feat__subtitle">
-                                    Relaible
-                                </h3>
+                                <h3>Relaible</h3>
                                 <p>Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
                             </div>
                         </div>
@@ -370,7 +369,7 @@
                         <ul class="footer__list">
                             <li class="line">GDPR</li>
                             <li class="line">Privacy Policy</li>
-                            <li class="line">Terma of Service</li>
+                            <li class="line">Terms of Service</li>
                             <li class="line">Disclaimer</li>
                         </ul>
                 </div>
