--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
                     <ul class="nav__links">
                         <li><a href="#features" class="nav__link">About</a>
                         </li>
-                        <li><a href="#steps" class="nav__link">Blog</a>
+                        <li><a href="#testimonial" class="nav__link">Blog</a>
                         </li>
                         <li><a href="#pricing" class="nav__link">Pricing</a>
                         </li>
-                        <li><a href="#testimonials" class="nav__link">Contact Us</a>
+                        <li><a href="https://treact.owaiskhan.me/" class="nav__link">Contact Us</a>
                         </li>
-                        <li><a href="#home" class="nav__link">Login</a>
+                        <li><a href="https://treact.owaiskhan.me/" class="nav__link">Login</a>
                         </li>
-                        <li><a href="#home" class="nav__link nav__link--primary">Sign up</a>
+                        <li><a href="https://treact.owaiskhan.me/" class="nav__link nav__link--primary">Sign up</a>
                         </li>
                     </ul>
                     <button class="btn__menu" onclick="openMenu()">
@@ -64,12 +64,12 @@
                         <h1> Beautiful React Templates <span class="purple">for you.</span></h1>
                         <h3>Our templates are easy to setup, understand and customize. Fully modular components with a variety of pages and components</h3>
                     </div>
-                    <div class="email__btn">
-                        <textarea class="email">your email Address</textarea>
-                        <a href="#">
-                            <button class="btn">Get Started</button>
-                        </a>
-                    </div>
+                    <form class="email">
+                        <div class="input__wrapper">
+                            <textarea class="input"></textarea>
+                                <button class="btn">Get Started</button>
+                        </div>
+                    </form>
                     <div class="customers">
                         <h6 class="gray"> OUR TRUSTED CUSTOMERS</h6>
                         <figure class="trust">
@@ -374,6 +374,7 @@
                         </ul>
                 </div>
             </div>
+            <div class="frame"><img class="logo" src="./assets/loogo.svg" alt=""><span class="logo__title--bottom">TREACT inc.</span></div>
             <div class="copyright">© 2018 Treact Inc. All Rights Reserved.</div>
             <div class="links">
                 <div class="link"><i class="fa fa-youtube"></i>
