--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
                     </div>
                     <form class="email">
                         <div class="input__wrapper">
-                            <textarea class="input"></textarea>
+                            <textarea class="input" placeholder="
+                            Your email"></textarea>
                                 <button class="btn">Get Started</button>
                         </div>
                     </form>
